--- a/.verb.md
+++ b/.verb.md
@@ -14,10 +14,10 @@ var boilerplate = require('{%= name %}');
 ```
 
 ## API
-{%%= apidocs("index.js") %}
+{%= apidocs("index.js") %}
 
 ## Related projects
-{%%= related([]) %}  
+{%= related(['scaffold', 'template', 'generate', 'assemble', 'update']) %}  
 
 ## Running tests
 {%= include("tests") %}
