--- a/.verb.md
+++ b/.verb.md
@@ -2,7 +2,21 @@
 
 > {%= description %}
 
-WIP
+Welcome to boilerplate! Here you'll find both the tools and conventions for creating project boilerplates.
+
+**What is a boilerplate?**
+
+> A boilerplate is a project with generic, reusable code, files or content that is intended to be used as a starting point for creating new projects. 
+
+**What does this project provide?**
+
+- [x] opinionated conventions for defining project boilerplates
+- [x] tools and libraries for authoring and publishing boilerplates  
+- [ ] tools for discovering boilerplates created by the community
+
+**What does this NOT provide?**
+
+Workflows and tools for actually generating new projects from a boilerplate. This is a job much better suited to build systems like gulp, grunt or yeoman.
 
 ## Install
 {%= include("install-npm", {save: true}) %}
@@ -17,7 +31,7 @@ var boilerplate = require('{%= name %}');
 {%= apidocs("index.js") %}
 
 ## Related projects
-{%= related(['scaffold', 'template', 'generate', 'assemble', 'update']) %}  
+{%= related(verb.related.list) %}  
 
 ## Running tests
 {%= include("tests") %}
