--- a/.verb.md
+++ b/.verb.md
@@ -10,13 +10,16 @@ Welcome to boilerplate! Here you'll find both the tools and conventions for crea
 
 **What does this project provide?**
 
-- [x] opinionated conventions for defining project boilerplates
-- [x] tools and libraries for authoring and publishing boilerplates  
-- [ ] tools for discovering boilerplates created by the community
+- [opinionated conventions][conventions] for defining and organizing project boilerplates
+- [API](#api) for actually creating boilerplates
+- [documentation and guide][docs] to help you get started with authoring your own boilerplates
+- [website][] for discovering boilerplates created by the community
 
 **What does this NOT provide?**
 
-Workflows and tools for actually generating new projects from a boilerplate. This is a job much better suited to build systems like gulp, grunt or yeoman.
+Workflows and tools for actually generating new projects from a boilerplate. This is a job much better suited to build systems like [assemble][], [gulp][], [grunt][], and [yeoman][].
+
+If you publish a 
 
 ## Install
 {%= include("install-npm", {save: true}) %}
@@ -32,6 +35,15 @@ var boilerplate = require('{%= name %}');
 
 ## Related projects
 {%= related(verb.related.list) %}  
+
+## Test coverage
+
+```
+Statements   : 100% (40/40)
+Branches     : 100% (24/24)
+Functions    : 100% (4/4)
+Lines        : 100% (39/39)
+```
 
 ## Running tests
 {%= include("tests") %}
@@ -49,3 +61,5 @@ var boilerplate = require('{%= name %}');
 ***
 
 {%= include("footer") %}
+
+[website]: http://boilerplates.io
