--- a/.verb.md
+++ b/.verb.md
@@ -10,10 +10,10 @@ Welcome to boilerplate! Here you'll find both the tools and conventions for crea
 
 **What does this project provide?**
 
-- [opinionated conventions][conventions] for defining and organizing project boilerplates
+- [opinionated conventions][terminology] for defining and organizing project boilerplates
 - [API](#api) for actually creating boilerplates
-- [documentation and guide][docs] to help you get started with authoring your own boilerplates
-- [website][] for discovering boilerplates created by the community
+- [documentation][docs] and [guide][] to help you get started with [authoring][] your own boilerplates
+- [website]({%= homepage %}) for discovering boilerplates created by the community
 
 **What does this NOT provide?**
 
@@ -37,6 +37,8 @@ var boilerplate = require('{%= name %}');
 {%= related(verb.related.list) %}  
 
 ## Test coverage
+
+As of {%= date() %}:
 
 ```
 Statements   : 100% (40/40)
@@ -63,3 +65,16 @@ Lines        : 100% (39/39)
 {%= include("footer") %}
 
 [website]: http://boilerplates.io
+[authoring]: ./docs/authoring.md
+[terminology]: ./docs/terminology.md
+[guide]: ./guide.md
+[docs]: ./getting-started.md
+
+
+{%= reflinks(['boilerplate', 'scaffold', 'template', 'expand-target', 'expand-files', 'grunt', 'gulp', 'assemble', 'yeoman', 'verb']) %}
+{%= reflinks(verb.related.list) %}
+
+[authoring]: docs/authoring.md
+[getting-started]: docs/getting-started.md
+[guide]: docs/guide.md
+[terminology]: docs/terminology.md
