--- a/.verb.md
+++ b/.verb.md
@@ -4,9 +4,145 @@
 
 Welcome to boilerplate! Here you'll find both the tools and conventions for creating project boilerplates.
 
+## Table of contents
+<!-- toc -->
+
+## Example
+
+First, install `boilerplate` and [html5-boilerplate][h5bp]:
+
+```sh
+$ npm i boilerplate && git clone https://github.com/h5bp/html5-boilerplate.git vendor/h5bp
+```
+
+The following examples returns a normalized configuration object for every file in the [html5-boilerplate][h5bp] project, organized exactly the way the project itself is organized.
+
+```js
+var Boilerplate = require('boilerplate');
+var h5bp = new Boilerplate({
+  options: {
+    cwd: 'vendor/h5bp/dist'
+  },
+  root: {src: ['{.*,*.*}'],   dest: 'src/'},
+  css:  {src: ['css/*.css'],  dest: 'src/'},
+  doc:  {src: ['doc/*.md'],   dest: 'src/'},
+  js:   {src: ['js/**/*.js'], dest: 'src/'}
+});
+console.log(h5bp);
+```
+
+Results in the following object:
+
+```js
+{
+  options: {
+    cwd: 'vendor/h5bp/dist'
+  },
+  config: {},
+  targets: {
+    root: {
+      options: {
+        cwd: 'vendor/h5bp/dist'
+      },
+      files: [
+        {
+          src: [
+            'vendor/h5bp/dist/.DS_Store',
+            'vendor/h5bp/dist/.editorconfig',
+            'vendor/h5bp/dist/.gitattributes',
+            'vendor/h5bp/dist/.gitignore',
+            'vendor/h5bp/dist/.htaccess',
+            'vendor/h5bp/dist/404.html',
+            'vendor/h5bp/dist/apple-touch-icon.png',
+            'vendor/h5bp/dist/browserconfig.xml',
+            'vendor/h5bp/dist/crossdomain.xml',
+            'vendor/h5bp/dist/favicon.ico',
+            'vendor/h5bp/dist/humans.txt',
+            'vendor/h5bp/dist/index.html',
+            'vendor/h5bp/dist/LICENSE.txt',
+            'vendor/h5bp/dist/robots.txt',
+            'vendor/h5bp/dist/tile-wide.png',
+            'vendor/h5bp/dist/tile.png'
+          ],
+          dest: 'src/',
+          options: {
+            cwd: 'vendor/h5bp/dist'
+          },
+          name: 'scaffold'
+        }
+      ]
+    },
+    css: {
+      options: {
+        cwd: 'vendor/h5bp/dist'
+      },
+      files: [
+        {
+          src: [
+            'vendor/h5bp/dist/css/main.css',
+            'vendor/h5bp/dist/css/normalize.css'
+          ],
+          dest: 'src/',
+          options: {
+            cwd: 'vendor/h5bp/dist'
+          },
+          name: 'scaffold'
+        }
+      ]
+    },
+    doc: {
+      options: {
+        cwd: 'vendor/h5bp/dist'
+      },
+      files: [
+        {
+          src: [
+            'vendor/h5bp/dist/doc/css.md',
+            'vendor/h5bp/dist/doc/extend.md',
+            'vendor/h5bp/dist/doc/faq.md',
+            'vendor/h5bp/dist/doc/html.md',
+            'vendor/h5bp/dist/doc/js.md',
+            'vendor/h5bp/dist/doc/misc.md',
+            'vendor/h5bp/dist/doc/TOC.md',
+            'vendor/h5bp/dist/doc/usage.md'
+          ],
+          dest: 'src/',
+          options: {
+            cwd: 'vendor/h5bp/dist'
+          },
+          name: 'scaffold'
+        }
+      ]
+    },
+    js: {
+      options: {
+        cwd: 'vendor/h5bp/dist'
+      },
+      files: [
+        {
+          src: [
+            'vendor/h5bp/dist/js/main.js',
+            'vendor/h5bp/dist/js/plugins.js',
+            'vendor/h5bp/dist/js/vendor/jquery-1.11.3.min.js',
+            'vendor/h5bp/dist/js/vendor/modernizr-2.8.3.min.js'
+          ],
+          dest: 'src/',
+          options: {
+            cwd: 'vendor/h5bp/dist'
+          },
+          name: 'scaffold'
+        }
+      ]
+    }
+  }
+}
+```
+
+## QA
+
 **What is a boilerplate?**
 
-> A boilerplate is a project with generic, reusable code, files or content that is intended to be used as a starting point for creating new projects. 
+A boilerplate is a project with generic, reusable code, files or content that is intended to be used as a starting point for creating new projects. 
 
 **What does this project provide?**
 
@@ -19,7 +155,7 @@ Welcome to boilerplate! Here you'll find both the tools and conventions for crea
 
 Workflows and tools for actually generating new projects from a boilerplate. This is a job much better suited to build systems like [assemble][], [gulp][], [grunt][], and [yeoman][].
 
-If you publish a 
+If you publish a library that works boilerplate, please [let us know about it](https://github.com/boilerplates/boilerplates/issues/new?title=boilerplate-%5Bname%20here%5D&body=I%20created%20a%20new%20boilerplate%3A%0A%0A*%20homepage%3A%20%5Bproject%20url%5D%20%0A*%20description%3A%20%5Bboilerplate%20description%5D)!
 
 ## Install
 {%= include("install-npm", {save: true}) %}
@@ -64,17 +200,14 @@ Lines        : 100% (39/39)
 
 {%= include("footer") %}
 
-[website]: http://boilerplates.io
 [authoring]: ./docs/authoring.md
+[docs]: ./docs/getting-started.md
+[guide]: ./docs/guide.md
 [terminology]: ./docs/terminology.md
-[guide]: ./guide.md
-[docs]: ./getting-started.md
+
+[h5bp]: https://github.com/h5bp/html5-boilerplate
+[website]: http://boilerplates.io
 
 
 {%= reflinks(['boilerplate', 'scaffold', 'template', 'expand-target', 'expand-files', 'grunt', 'gulp', 'assemble', 'yeoman', 'verb']) %}
 {%= reflinks(verb.related.list) %}
-
-[authoring]: docs/authoring.md
-[getting-started]: docs/getting-started.md
-[guide]: docs/guide.md
-[terminology]: docs/terminology.md
