reflect `target` change

--- a/.verb.md
+++ b/.verb.md
@@ -9,6 +9,8 @@ Welcome to boilerplate! Here you'll find both the tools and conventions for crea
 
 ## Example
 
+This example shows how easy it is to convert an existing project into a `Boilerplate` project using the most popular boilerplate of them all: [html5-boilerplate][h5bp]. 
+
 First, install `boilerplate` and [html5-boilerplate][h5bp]:
 
 ```sh
@@ -155,7 +157,7 @@ A boilerplate is a project with generic, reusable code, files or content that is
 
 Workflows and tools for actually generating new projects from a boilerplate. This is a job much better suited to build systems like [assemble][], [gulp][], [grunt][], and [yeoman][].
 
-If you publish a library that works boilerplate, please [let us know about it](https://github.com/boilerplates/boilerplates/issues/new?title=boilerplate-%5Bname%20here%5D&body=I%20created%20a%20new%20boilerplate%3A%0A%0A*%20homepage%3A%20%5Bproject%20url%5D%20%0A*%20description%3A%20%5Bboilerplate%20description%5D)!
+If you publish a library that works with Boilerplate, please [let us know about it](https://github.com/boilerplates/boilerplates/issues/new?title=boilerplate-%5Bname%20here%5D&body=I%20created%20a%20new%20boilerplate%3A%0A%0A*%20homepage%3A%20%5Bproject%20url%5D%20%0A*%20description%3A%20%5Bboilerplate%20description%5D)!
 
 ## Install
 {%= include("install-npm", {save: true}) %}
