generate docs with verb

--- a/.verb.md
+++ b/.verb.md
@@ -4,12 +4,60 @@
 
 Welcome to boilerplate! Here you'll find both the tools and conventions for creating project boilerplates.
 
+**What does this do?**
+
+1. Makes it easy to create and publish new projects from boilerplates that have reusable [scaffolds][scaffold], templates, styles, themes, data etc.
+2. To uncouple these "non-moving-parts" from any particular build system or generator, so we can easily generate new projects by simply passing the boilerplate config object to your build system or project generator of choice!
+
+**Example**
+
+In the following example, we define:
+
+- **scaffolds** for our marketing and developer sites
+- **targets** inside each scaffold (`site` and `blog`)
+- **files** configurations inside each "site" and "blog" target
+
+The configuration is similar to how [Grunt][] tasks would be defined.
+
+```js
+var boilerplate = require('{%= name %}');
+
+boilerplate({
+  marketing: {
+    site: {
+      src: 'templates/mktg/*.hbs',
+      dest: 'site/'
+    },
+    blog: {
+      src: 'content/blog/*.md',
+      dest: 'site/blog/'
+    }
+  },
+  developer: {
+    site: {
+      src: 'templates/dev/*.hbs',
+      dest: 'site/developer'
+    },
+    blog: {
+      src: 'content/dev/blog/*.md',
+      dest: 'site/developer/blog/'
+    }
+  }
+});
+```
+
+The `Boilerplate` library "expands" this configuration into a normalized object that can easily be passed to [gulp][], [grunt][], [assemble][], [metalsmith][], or even [yeoman][], for scaffolding out various parts of a blog, website, web application or whatever you think a boilerplate might be useful for!
+
 ## Table of contents
 <!-- toc -->
 
-## Example
+## html5-boilerplate example
 
-This example shows how easy it is to convert an existing project into a `Boilerplate` project using the most popular boilerplate of them all: [html5-boilerplate][h5bp]. 
+Just to show how easy it is to convert an existing project into a `Boilerplate` project using the most popular boilerplate of them all: [html5-boilerplate][h5bp]. 
+
+_(Get hands-on with the [h5bp recipe](./recipes/h5bp))_
+
+**Install h5bp**
 
 First, install `boilerplate` and [html5-boilerplate][h5bp]:
 
@@ -17,10 +65,12 @@ First, install `boilerplate` and [html5-boilerplate][h5bp]:
 $ npm i boilerplate && git clone https://github.com/h5bp/html5-boilerplate.git vendor/h5bp
 ```
 
-The following examples returns a normalized configuration object for every file in the [html5-boilerplate][h5bp] project, organized exactly the way the project itself is organized.
+**Define the boilerplate**
+
+The following examples returns a normalized configuration object for every file in the [html5-boilerplate][h5bp] project, organized exactly the way the project itself is organized. 
 
 ```js
-var Boilerplate = require('boilerplate');
+var Boilerplate = require('{%= name %}');
 var h5bp = new Boilerplate({
   options: {
     cwd: 'vendor/h5bp/dist'
@@ -140,7 +190,7 @@ Results in the following object:
 }
 ```
 
-## QA
+## About
 
 **What is a boilerplate?**
 
@@ -155,9 +205,20 @@ A boilerplate is a project with generic, reusable code, files or content that is
 
 **What does this NOT provide?**
 
-Workflows and tools for actually generating new projects from a boilerplate. This is a job much better suited to build systems like [assemble][], [gulp][], [grunt][], and [yeoman][].
+Workflows and tools for actually generating new projects from a boilerplate. This is a job much better suited for build systems like [assemble][], [gulp][], [grunt][], [broccoli][], and [yeoman][].
 
 If you publish a library that works with Boilerplate, please [let us know about it](https://github.com/boilerplates/boilerplates/issues/new?title=boilerplate-%5Bname%20here%5D&body=I%20created%20a%20new%20boilerplate%3A%0A%0A*%20homepage%3A%20%5Bproject%20url%5D%20%0A*%20description%3A%20%5Bboilerplate%20description%5D)!
+
+### Comparison table
+
+The following table describes the difference between boilerplates, scaffolds and templates.
+
+| **type** | **description** |
+| --- | --- |
+| [template](https://github.com/jonschlinkert/templates) | Resuable file, code or content which contains "placeholder" values that will eventually be replaced with real values by a rendering (template) engine |
+| [scaffold](#{%= name %}) | Consists of one or more templates or source files and serves as a "temporary support structure" that may be used to initialize a new project, or to provide ad-hoc "components" throughout the duration of a project. |
+| [boilerplate](https://github.com/boilerplates) | Boilerplates consist of all of the necessary files required to initialize a complete project. |
+
 
 ## Install
 {%= include("install-npm", {save: true}) %}
@@ -196,7 +257,7 @@ Lines        : 100% (39/39)
 
 ## License
 {%= copyright() %}
-{%= license() %}
+{%= license %}
 
 ***
 
