lint, fix links in readme

--- a/.verb.md
+++ b/.verb.md
@@ -1,4 +1,4 @@
-# {%= name %} {%= badge("fury") %}
+# {%= name %} {%= badge("fury") %} {%= badge("travis") %}
 
 > {%= description %}
 
@@ -216,8 +216,8 @@ The following table describes the difference between boilerplates, scaffolds and
 | **type** | **description** |
 | --- | --- |
 | [template](https://github.com/jonschlinkert/templates) | Resuable file, code or content which contains "placeholder" values that will eventually be replaced with real values by a rendering (template) engine |
-| [scaffold](#{%= name %}) | Consists of one or more templates or source files and serves as a "temporary support structure" that may be used to initialize a new project, or to provide ad-hoc "components" throughout the duration of a project. |
-| [boilerplate](https://github.com/boilerplates) | Boilerplates consist of all of the necessary files required to initialize a complete project. |
+| [scaffold](https://github.com/jonschlinkert/scaffold) | Consists of one or more templates or source files and serves as a "temporary support structure" that may be used to initialize a new project, or to provide ad-hoc "components" throughout the duration of a project. |
+| [boilerplate](#{%= name %}) | Boilerplates consist of all of the necessary files required to initialize a complete project. |
 
 
 ## Install
@@ -271,6 +271,4 @@ Lines        : 100% (39/39)
 [h5bp]: https://github.com/h5bp/html5-boilerplate
 [website]: http://boilerplates.io
 
-
-{%= reflinks(['boilerplate', 'scaffold', 'template', 'expand-target', 'expand-files', 'grunt', 'gulp', 'assemble', 'yeoman', 'verb']) %}
-{%= reflinks(verb.related.list) %}
+{%= reflinks(verb.reflinks) %}
