--- a/.verb.md
+++ b/.verb.md
@@ -1,7 +1,3 @@
-# {%= name %} {%= badge("fury") %} {%= badge("travis") %}
-
-> {%= description %}
-
 Welcome to boilerplate! Here you'll find both the tools and conventions for creating project boilerplates.
 
 **What does this do?**
@@ -17,7 +13,7 @@ In the following example, we define:
 - **targets** inside each scaffold (`site` and `blog`)
 - **files** configurations inside each "site" and "blog" target
 
-The configuration is similar to how [Grunt][] tasks would be defined.
+The configuration is similar to how [grunt][] tasks would be defined.
 
 ```js
 var boilerplate = require('{%= name %}');
@@ -200,7 +196,7 @@ A boilerplate is a project with generic, reusable code, files or content that is
 
 - [opinionated conventions][terminology] for defining and organizing project boilerplates
 - [API](#api) for actually creating boilerplates
-- [documentation][docs] and [guide][] to help you get started with [authoring][] your own boilerplates
+- [documentation][docs] and [guide][] to help you get started with [authoring] your own boilerplates
 - [website]({%= homepage %}) for discovering boilerplates created by the community
 
 **What does this NOT provide?**
@@ -220,21 +216,6 @@ The following table describes the difference between boilerplates, scaffolds and
 | [boilerplate](#{%= name %}) | Boilerplates consist of all of the necessary files required to initialize a complete project. |
 
 
-## Install
-{%= include("install-npm", {save: true}) %}
-
-## Usage
-
-```js
-var boilerplate = require('{%= name %}');
-```
-
-## API
-{%= apidocs("index.js") %}
-
-## Related projects
-{%= related(verb.related.list) %}  
-
 ## Test coverage
 
 As of {%= date() %}:
@@ -246,29 +227,11 @@ Functions    : 100% (4/4)
 Lines        : 100% (39/39)
 ```
 
-## Running tests
-{%= include("tests") %}
 
-## Contributing
-{%= include("contributing") %}
-
-## Author
-{%= include("author") %}
-
-## License
-{%= copyright() %}
-{%= license %}
-
-***
-
-{%= include("footer") %}
-
-[authoring]: ./docs/authoring.md
+[authoring]: docs/authoring.md
 [docs]: ./docs/getting-started.md
 [guide]: ./docs/guide.md
 [terminology]: ./docs/terminology.md
 
 [h5bp]: https://github.com/h5bp/html5-boilerplate
 [website]: http://boilerplates.io
-
-{%= reflinks(verb.reflinks) %}
