--- a/.verb.md
+++ b/.verb.md
@@ -207,13 +207,13 @@ If you publish a library that works with Boilerplate, please [let us know about 
 
 ### Comparison table
 
-The following table describes the difference between boilerplates, scaffolds and templates.
+Many definitions exist for the terms "boilerplate", "scaffold" and "template". The following definitions describe these concepts as it relates to this project.
 
 | **type** | **description** |
 | --- | --- |
 | [template](https://github.com/jonschlinkert/templates) | Resuable file, code or content which contains "placeholder" values that will eventually be replaced with real values by a rendering (template) engine |
 | [scaffold](https://github.com/jonschlinkert/scaffold) | Consists of one or more templates or source files and serves as a "temporary support structure" that may be used to initialize a new project, or to provide ad-hoc "components" throughout the duration of a project. |
-| [boilerplate](#{%= name %}) | Boilerplates consist of all of the necessary files required to initialize a complete project. |
+| boilerplate | Boilerplates consist of all of the necessary files required to initialize a complete project. |
 
 
 ## Test coverage
