--- a/.verb.md
+++ b/.verb.md
@@ -49,7 +49,7 @@ The `Boilerplate` library "expands" this configuration into a normalized object 
 
 ## html5-boilerplate example
 
-Just to show how easy it is to convert an existing project into a `Boilerplate` project using the most popular boilerplate of them all: [html5-boilerplate][h5bp]. 
+Just to show how easy it is to convert an existing project into a `Boilerplate` project using the most popular boilerplate of them all: [html5-boilerplate][h5bp].
 
 _(Get hands-on with the [h5bp recipe](./recipes/h5bp))_
 
@@ -63,7 +63,7 @@ $ npm i boilerplate && git clone https://github.com/h5bp/html5-boilerplate.git v
 
 **Define the boilerplate**
 
-The following examples returns a normalized configuration object for every file in the [html5-boilerplate][h5bp] project, organized exactly the way the project itself is organized. 
+The following examples returns a normalized configuration object for every file in the [html5-boilerplate][h5bp] project, organized exactly the way the project itself is organized.
 
 ```js
 var Boilerplate = require('{%= name %}');
@@ -186,11 +186,11 @@ Results in the following object:
 }
 ```
 
-## About
+## FAQ
 
 **What is a boilerplate?**
 
-A boilerplate is a project with generic, reusable code, files or content that is intended to be used as a starting point for creating new projects. 
+A boilerplate is a project with generic, reusable code, files or content that is intended to be used as a starting point for creating new projects.
 
 **What does this project provide?**
 
@@ -215,18 +215,11 @@ Many definitions exist for the terms "boilerplate", "scaffold" and "template". T
 | [scaffold](https://github.com/jonschlinkert/scaffold) | Consists of one or more templates or source files and serves as a "temporary support structure" that may be used to initialize a new project, or to provide ad-hoc "components" throughout the duration of a project. |
 | boilerplate | Boilerplates consist of all of the necessary files required to initialize a complete project. |
 
+## History
 
-## Test coverage
+**v0.6.0**
 
-As of {%= date() %}:
-
-```
-Statements   : 100% (40/40)
-Branches     : 100% (24/24)
-Functions    : 100% (4/4)
-Lines        : 100% (39/39)
-```
-
+- `removed`: targets are no longer added to `boilerplate.targets`. Instead they are added to `boilerplate.scaffolds.default.targets`. As a result there is no need to loop over both `targets` and `scaffolds` at build time
 
 [authoring]: docs/authoring.md
 [docs]: ./docs/getting-started.md
